--- a/README.rdoc
+++ b/README.rdoc
@@ -1,22 +1,22 @@
 = EM-Proxy
 
-EventMachine HTTP Duplex Proxy: splits any incoming request into two parallel connections to two hosts. 
-- One of the connections is marked as production: response is forwarded to client
-- One of the connections is marked as benchmark: response is buffered by the proxy
-- Once both connections are finished, a 'post processor' is executed
-- Response time + response body is compared and analyzed
+EventMachine Proxy DSL: 
+- http://www.igvita.com/2009/04/20/ruby-proxies-for-scale-and-monitoring/
 
+== Simple port forwarding proxy
 
-== Why?
+    Proxy.start(:host => "0.0.0.0", :port => 80) do |conn|
+      conn.server :srv, :host => "127.0.0.1", :port => 81
 
-Because sometimes you want to benchmark your new code against the production environment, and this pattern
-makes it easy to do so! Put up a proxy, customize it, and analyze whatever you want. The client won't notice
-a thing.
+      # modify / process request stream
+      conn.on_data do |data|
+        p [:on_data, data]
+        data
+      end
 
-== Example
-
-  > ruby server.rb -c demo/duplex_http.yml
-  > ruby demo/appserver.rb 9001
-  > ruby demo/appserver.rb 9002
-
-  > curl localhost:9000 
+      # modify / process response stream
+      conn.on_response do |backend, resp|
+        p [:on_response, backend, resp]
+        resp
+      end
+    end
