--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,13 @@
 = EM-Proxy
 
-EventMachine Proxy DSL: 
+EventMachine Proxy DSL for writing high-performance transparent / intercepting proxies in Ruby.
+
 - Slides from RailsConf 2009: http://bit.ly/D7oWB
+- GoGaRuCo notes & Slides: http://www.igvita.com/2009/04/20/ruby-proxies-for-scale-and-monitoring/
 
 == Simple port forwarding proxy
 
-    Proxy.start(:host => "0.0.0.0", :port => 80) do |conn|
+    Proxy.start(:host => "0.0.0.0", :port => 80, :debug => true) do |conn|
       conn.server :srv, :host => "127.0.0.1", :port => 81
 
       # modify / process request stream
@@ -20,3 +22,10 @@ EventMachine Proxy DSL:
         resp
       end
     end
+
+For more examples see the /examples directory.
+ - SMTP Spam Filtering
+ - Duplicating traffic
+ - Selective forwarding
+ - Beanstalkd interceptor
+ - etc.
