--- a/README.rdoc
+++ b/README.rdoc
@@ -7,14 +7,17 @@ EventMachine Proxy DSL for writing high-performance transparent / intercepting p
 
 == Getting started
 
-  # install & configure gemcutter repos
-  gem update --system
-  gem install gemcutter
-  gem tumble
+  $> gem install em-proxy
+  $> em-proxy
+  Usage: em-proxy [options]
+      -l, --listen [PORT]              Port to listen on
+      -d, --duplex [host:port, ...]    List of backends to duplex data to
+      -r, --relay [hostname:port]      Relay endpoint: hostname:port
+      -v, --verbose                    Run in debug mode
 
-  gem install em-proxy
+  $> em-proxy -l 8080 -r localhost:8081 -d localhost:8082,localhost:8083 -v
 
-  irb:0> require 'em-proxy'
+The above will start em-proxy on port 8080, relay and respond with data from port 8081, and also (optional) duplicate all traffic to ports 8082 and 8083 (and discard their responses).
 
 == Simple port forwarding proxy
 
